--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-  <title>POOP</title>
+  <title>???</title>
 
-<p>Poop is gud(stop) verrry yomi(stop)</p>
+<h1>All About Diabolos</h1>
 
 </head>
