--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <title>???</title>
-  <link href="stylesheet" rel="styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 <h1>All About Diabolos</h1>
 
