--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <link rel="stylesheet" href="styles.css">
 
 <h1>All About Diabolos</h1>
-
+<hr>
+  <p>A diabolo is a skill toy that is basically a big yoyo without a string. Instead, the string is attached to two sticks and you use the sticks to control the diabolo.</p>
 </head>
