--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <title>???</title>
   <link rel="stylesheet" href="styles.css">
-<h6>credit: yoyotricks.com</h6>
+<a href="https://yoyotricks.com/juggling-tricks/diabolo-tricks/">credit: yoyotricks.com</a>
 <h1>All About Diabolos</h1>
   <h2>Click Here To Find Out!</h2>
 <hr>
