--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <head>
   <title>???</title>
   <link rel="stylesheet" href="styles.css">
+  <a href="whatisadiabolo.html">Click Here To Find Out!</a>
 <a href="https://yoyotricks.com/juggling-tricks/diabolo-tricks/">credit: yoyotricks.com</a>
 <h1>All About Diabolos</h1>
-  <h2>Click Here To Find Out!</h2>
+  
 <hr>
   
 </head>
