--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <title>???</title>
   <link rel="stylesheet" href="styles.css">
-  <a href="whatisadiabolo.html">Click Here To Find Out!</a>
+  <a href="whatisadiabolo.html"><h1>Click Here To Find Out!</h1></a>
 <a href="https://yoyotricks.com/juggling-tricks/diabolo-tricks/">credit: yoyotricks.com</a>
 <h1>All About Diabolos</h1>
   
